# DevBot

./: .env.example  .gitignore  LICENSE  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
devbot/: __init__.py  agent.py  autopilot.py  cli.py  config.py  devlog.py  evolve.py  evolve_limits.py  evolve_planner.py  gitcheckpoint.py  local_llm_health.py  session.py  swarm.py  tools.py
tests/: conftest.py  test_autopilot.py  test_cli.py  test_evolve.py  test_evolve_limits.py  test_evolve_planner.py  test_gitcheckpoint.py  test_local_provider.py  test_megaswarm_improvements.py  test_phase1.py  test_phase2.py  test_phase3_diff.py  test_phase3_monitor.py  test_phase3_readline.py  test_phase3_smoke.py  test_phase4.py  test_phase5.py  test_session.py
