[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "devbot"
version = "0.1.0"
description = "A Claude Code-style CLI coding agent powered by the DeepSeek API"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["openai>=1.40"]

[project.scripts]
devbot = "devbot.cli:main"

[tool.setuptools]
packages = ["devbot"]
