[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "devbot"
version = "0.1.0"
description = "A Claude Code-style CLI coding agent powered by the DeepSeek API"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["openai>=1.40", "ddgs>=9.0", "httpx>=0.27"]
[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]
win = ["pyreadline3>=3.5"]

[project.scripts]
devbot = "devbot.cli:main"

[tool.setuptools]
packages = ["devbot"]
